--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django==5.1.4",
+    "django-environ>=0.12.0",
+    "environ>=1.0",
     "pillow>=11.2.1",
 ]
